added search feature

--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,13 @@
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li><a href="/index.html">Placement Portal</a></li>
+                    <li><a href="/search">Search</a></li>
                     <li ><a href="/student_details">Student's Details</a></li>
                     <li><a href="/company_details">Companies Visiting</a></li>
                     <li><a href="/unregister_company">Unregister Company</a></li>
                     <li><a href="/unregister_student">Unregister Student</a></li>
                     <li><a href="/update_student">Update Student</a></li>
+                    
                 </ul>
                 
             </div>
